--- a/src/public/css/ionicons.css
+++ b/src/public/css/ionicons.css
@@ -1,133 +1,19 @@
 @charset "UTF-8";
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
+/*!
+  Ionicons, v2.0.0
+  Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
+  https://twitter.com/benjsperry  https://twitter.com/ionicframework
+  MIT License: https://github.com/driftyco/ionicons
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol,
-ul {
-  list-style: none; }
-
-blockquote,
-q {
-  quotes: none; }
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none; }
-
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
+  Android-style icons originally built by Google’s
+  Material Design Icons: https://github.com/google/material-design-icons
+  used under CC BY http://creativecommons.org/licenses/by/4.0/
+  Modified icons to fit ionicon’s grid from original.
+*/
 @font-face {
   font-family: "Ionicons";
-  src: url("../fonts/ionicons/ionicons.eot?v=2.0.0");
-  src: url("../fonts/ionicons/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../fonts/ionicons/ionicons.ttf?v=2.0.0") format("truetype"), url("../fonts/ionicons/ionicons.woff?v=2.0.0") format("woff"), url("../fonts/ionicons/ionicons.svg?v=2.0.0#Ionicons") format("svg");
+  src: url("../fonts/ionicons.eot?v=2.0.0");
+  src: url("../fonts/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=2.0.0") format("truetype"), url("../fonts/ionicons.woff?v=2.0.0") format("woff"), url("../fonts/ionicons.svg?v=2.0.0#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -3075,154 +2961,3 @@ table {
 
 .ion-xbox:before {
   content: ""; }
-
-html, body {
-  height: 100%;
-  background: black; }
-
-body {
-  font-family: 'Helvetica', 'Arial', 'sans-serif';
-  font-size: 16px;
-  color: white; }
-
-* {
-  box-sizing: border-box; }
-
-h1 {
-  font-weight: bold;
-  font-size: 2em; }
-
-h2 {
-  font-weight: bold;
-  font-size: 1.6em;
-  margin-bottom: 0.4em; }
-
-h4 {
-  font-weight: bold;
-  margin-bottom: 0.4em; }
-
-.user-selector, .group-selector {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%; }
-  .user-selector .groups, .user-selector .users, .group-selector .groups, .group-selector .users {
-    width: auto; }
-  .user-selector h2, .group-selector h2 {
-    width: auto; }
-  .user-selector .group, .user-selector .user, .group-selector .group, .group-selector .user {
-    font-weight: bold;
-    border: 3px solid white;
-    width: 300px;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 5px;
-    cursor: pointer; }
-    .user-selector .group:hover, .user-selector .user:hover, .group-selector .group:hover, .group-selector .user:hover {
-      background: #f0f0f0; }
-
-.user-name {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 9999; }
-
-.canvas-holder {
-  border: 3px solid white;
-  width: 70%;
-  display: inline-block;
-  position: relative;
-  margin-top: 50px;
-  margin-left: 10px; }
-  .canvas-holder:after {
-    padding-top: 56.25%;
-    /* 16:9 ratio */
-    display: block;
-    content: ''; }
-  .canvas-holder .canvas {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0; }
-
-.interface {
-  height: 100%; }
-
-.list {
-  width: 27%;
-  float: right;
-  padding-top: 25px;
-  height: 100%; }
-  .list ul {
-    margin-top: 10px;
-    margin-bottom: 15px; }
-    .list ul li {
-      font-weight: bold;
-      line-height: 1.5em; }
-      .list ul li ul {
-        margin-top: 0; }
-        .list ul li ul li {
-          font-weight: normal;
-          margin-left: 1em; }
-
-input, label {
-  cursor: pointer; }
-
-.timeline {
-  width: 70%;
-  float: left;
-  margin-left: 10px;
-  margin-top: 20px; }
-  .timeline .slider {
-    width: 100%;
-    height: 8px;
-    background: #666;
-    position: relative;
-    cursor: pointer;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    box-sizing: border-box; }
-    .timeline .slider .indicator {
-      width: 4px;
-      height: 16px;
-      position: absolute;
-      top: -6px;
-      left: -2px;
-      background: white;
-      cursor: pointer;
-      z-index: 999; }
-    .timeline .slider .keyframe {
-      position: absolute;
-      cursor: pointer;
-      width: 10px;
-      height: 10px;
-      background: #E91E63;
-      border-radius: 5px;
-      top: -3px;
-      margin-left: -5px; }
-      .timeline .slider .keyframe:hover {
-        background: red;
-        transform: scale(1.3); }
-  .timeline .controls {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 1.2em; }
-    .timeline .controls .add-keyframe {
-      text-transform: uppercase;
-      border: 1px solid white;
-      font-size: 0.5em;
-      padding: 4px 6px 4px 2px;
-      position: relative;
-      top: -3px;
-      margin-left: 20px;
-      cursor: pointer; }
-      .timeline .controls .add-keyframe:hover {
-        border-color: #999;
-        color: #999; }
-    .timeline .controls .icon {
-      margin-right: 4px;
-      margin-left: 4px; }
-      .timeline .controls .icon:hover {
-        cursor: pointer;
-        color: #999; }
