--- a/src/public/sass/main.scss
+++ b/src/public/sass/main.scss
@@ -2,3 +2,206 @@
 
 @import "reset";
 @import "fonts";
+
+html, body {
+	height: 100%;
+	background: black;
+}
+
+body {
+	font-family: 'Helvetica', 'Arial', 'sans-serif';
+	font-size: 16px;
+	color: white;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+h1 {
+	font-weight: bold;
+	font-size: 2em;
+}
+
+h2 {
+	font-weight: bold;
+	font-size: 1.6em;
+	margin-bottom: 0.4em;
+}
+
+h4 {
+	font-weight: bold;
+	margin-bottom: 0.4em;
+}
+
+.user-selector, .group-selector {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	//width: 100%;
+	height: 100%;
+	//flex-direction: column;
+
+	.groups, .users {
+		width: auto;
+	}
+
+	h2 {
+		width: auto;
+	}
+
+	.group, .user {
+		font-weight: bold;
+		border: 3px solid white;
+		width: 300px;
+		text-align: center;
+		padding: 10px;
+		margin-bottom: 5px;
+		cursor: pointer;
+
+		&:hover {
+			background: #f0f0f0;
+		}
+	}
+}
+
+.user-name {
+	position: fixed;
+	top: 10px;
+	left: 10px;
+	z-index: 9999;
+}
+
+.canvas-holder {
+	border: 3px solid white;
+	width: 70%;
+	display: inline-block;
+	position: relative;
+	margin-top: 50px;
+	margin-left: 10px;
+
+	&:after {
+		padding-top: 56.25%; /* 16:9 ratio */
+		display: block;
+		content: '';
+	}
+
+	.canvas {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+}
+
+.interface {
+	height: 100%;
+}
+
+.list {
+	width: 27%;
+	float: right;
+	padding-top: 25px;
+	height: 100%;
+
+	ul {
+		margin-top: 10px;
+		margin-bottom: 15px;
+		
+		li {
+			font-weight: bold;
+			line-height: 1.5em;
+
+			ul {
+				margin-top: 0;
+
+				li {
+					font-weight: normal;
+					margin-left: 1em;
+				}
+			}
+		}
+	}
+}
+
+input, label {
+	cursor: pointer;
+}
+
+.timeline {
+	width: 70%;
+	float: left;
+	margin-left: 10px;
+	margin-top: 20px;
+
+	.slider {
+		width: 100%;
+		height: 8px;
+		background: #666;
+		position: relative;
+		cursor: pointer;
+		border-top: 2px solid black;
+		border-bottom: 2px solid black;
+		box-sizing: border-box;
+
+		.indicator {
+			width: 4px;
+			height: 16px;
+			position: absolute;
+			top: -6px;
+			left: -2px;
+			background: white;
+			cursor: pointer;
+			z-index: 999;
+		}
+
+		.keyframe {
+			position: absolute;
+			cursor: pointer;
+			width: 10px;
+			height: 10px;
+			background: #E91E63;
+			border-radius: 5px;
+			top: -3px;
+			margin-left: -5px;
+
+			&:hover {
+				background: red;
+				transform: scale(1.3);
+			}
+		}
+	}
+
+	.controls {
+		text-align: center;
+		margin-top: 20px;
+		font-size: 1.2em;
+
+		.add-keyframe {
+			text-transform: uppercase;
+			border: 1px solid white;
+			font-size: 0.5em;
+			padding: 4px 6px 4px 2px;
+			position: relative;
+			top: -3px;
+			margin-left: 20px;
+			cursor: pointer;
+
+			&:hover {
+				border-color: #999;
+				color: #999;
+			}
+		}
+
+		.icon {
+			margin-right: 4px;
+			margin-left: 4px;
+
+			&:hover {
+				cursor: pointer;
+				color: #999;
+			}
+		}
+	}
+}
