--- a/src/public/sass/main.scss
+++ b/src/public/sass/main.scss
@@ -81,7 +81,8 @@ h4 {
 	margin-left: 10px;
 
 	&:after {
-		padding-top: 56.25%; /* 16:9 ratio */
+		//padding-top: 56.25%; /* 16:9 ratio */
+		padding-top: 75%; /* 4:3 ratio */
 		display: block;
 		content: '';
 	}
