--- a/src/app/views/interface.hbs
+++ b/src/app/views/interface.hbs
@@ -1,7 +1,7 @@
 {{> header this}}
 
 <div class="user-name">
-	<h2>{{user.first_name}} {{user.last_name}}</h2>
+	<h2>{{user.name}}</h2>
 </div>
 
 <div class="interface">
