--- a/src/app/views/index.hbs
+++ b/src/app/views/index.hbs
@@ -4,7 +4,7 @@
 	<div class="groups">
 		{{#each groups}}
 			<div class="group" data-id="{{id}}">
-				{{name}}
+				Groep {{id}}
 			</div>
 		{{/each}}
 	</div>
