--- a/src/app/views/interface.hbs
+++ b/src/app/views/interface.hbs
@@ -13,15 +13,13 @@
 		<h4>Objecten</h4>
 		<ul>
 		{{#each user.objects}}
-			<li>
-				<input id="obj_{{@index}}" type="checkbox" />
-				<label for="obj_{{@index}}">Object {{@index}}</label>
+			<li><span class="toggle-images"><i class="icon ion-arrow-right-b"></i><i class="icon ion-arrow-down-b"></i>&nbsp;Object {{@index}}</span>
 
 			<ul>
-				{{#each images}}
+				{{#each nodes}}
 					<li>
-						<input id="img_{{@index}}_{{@../index}}" type="checkbox" />
-						<label for="img_{{@index}}_{{@../index}}">{{fileName}}</label>
+						<input id="img_{{id}}" data-id="{{id}}" type="checkbox" />
+						<label for="img_{{id}}">Afbeelding {{number}}</label>
 					</li>
 				{{/each}}
 			</ul>
@@ -41,6 +39,9 @@
 			<i class="icon ion-ios-skipforward next-keyframe"></i>
 			<span class="add-keyframe">
 				<i class="icon ion-plus"></i> keyframe
+			</span>
+			<span class="remove-keyframe">
+				<i class="icon ion-android-close"></i> keyframe
 			</span>
 		</div>
 	</div>
