--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -3153,7 +3153,12 @@ h4 {
   width: 27%;
   float: right;
   padding-top: 25px;
-  height: 100%; }
+  height: 100%;
+  pointer-events: none;
+  opacity: 0.3; }
+  .list.enabled {
+    pointer-events: auto;
+    opacity: 1; }
   .list ul {
     margin-top: 10px;
     margin-bottom: 15px;
