--- a/src/app/views/interface.hbs
+++ b/src/app/views/interface.hbs
@@ -18,7 +18,7 @@
 			<ul>
 				{{#each nodes}}
 					<li>
-						<input id="img_{{id}}" data-id="{{id}}" type="checkbox" />
+						<input class="image-checkbox" id="img_{{id}}" data-id="{{id}}" type="checkbox" />
 						<label for="img_{{id}}">Afbeelding {{number}}</label>
 					</li>
 				{{/each}}
