--- a/src/app/views/interface.hbs
+++ b/src/app/views/interface.hbs
@@ -13,7 +13,7 @@
 		<h4>Objecten</h4>
 		<ul>
 		{{#each user.objects}}
-			<li><span class="toggle-images"><i class="icon ion-arrow-right-b"></i><i class="icon ion-arrow-down-b"></i>&nbsp;Object {{@index}}</span>
+			<li class="expanded"><span class="toggle-images"><i class="icon ion-arrow-right-b"></i><i class="icon ion-arrow-down-b"></i>&nbsp;Object {{@index}}</span>
 
 			<ul>
 				{{#each nodes}}
