--- a/src/public/sass/main.scss
+++ b/src/public/sass/main.scss
@@ -12,6 +12,11 @@ body {
 	font-family: 'Helvetica', 'Arial', 'sans-serif';
 	font-size: 16px;
 	color: white;
+
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 }
 
 * {
@@ -93,6 +98,7 @@ h4 {
 		bottom: 0;
 		left: 0;
 		right: 0;
+		overflow: hidden;
 	}
 }
 
@@ -252,5 +258,22 @@ input, label {
 				color: #999;
 			}
 		}
+	}
+}
+
+.node {
+	position: absolute;
+	left:50%;
+	top:50%;
+	width: 50px;
+	height: 50px;
+	background: red;
+	margin-left: -25px;
+	margin-top:-25px;
+	opacity: .5;
+
+	&.active {
+		opacity: 1;
+		z-index: 999;
 	}
 }
