implemented pause function

--- a/src/app/views/interface.hbs
+++ b/src/app/views/interface.hbs
@@ -36,6 +36,7 @@
 		<div class="controls">
 			<i class="icon ion-ios-skipbackward prev-keyframe"></i>
 			<i class="icon ion-play"></i>
+			<i class="icon ion-pause"></i>
 			<i class="icon ion-ios-skipforward next-keyframe"></i>
 			<span class="add-keyframe">
 				<i class="icon ion-plus"></i> keyframe
